yle-dl - download videos from Yle servers
Copyright 2009-2021 Antti Ajanki
Distributed under the GPL v3

Version 20211213

- Some programs failed to download on the ffmpeg backend
- Remove an extra colon at the end of live stream filenames

Version 20211207

- Writing to standard output (--pipe and -o -) was broken in the previous release

Version 20211203

- Select the highest resolution by default on Pentulive (and other live streams)
- Record past events in Pentulive: --startposition -3600

Version 20210917

- Apparently each seasons of a series can have a distinct ID. Added
  support for those.
- --latestepisode is much faster than before

Version 20210808

- Some geo-restricted streams can now be downloaded outside Finland
- Changed the syntax of --output-template: separator characters are not
  inserted automatically anymore
- Proxy support for the HLS backend
- Word were sometimes missing from episode titles
- Support for new Arkisto URLs: https://yle.fi/aihe/a/

Version 20210704

- Support for new Svenska Arkivet URLs: https://svenska.yle.fi/a/
- Support for a new stream type on Areena
- Only Python 3.6+ supported from now on

Version 20210502

- Fixed the support for yle.fi/uutiset video and audio

Version 20210212

- Partially fixed a problem downloading radio programs on Mac OS X:
  individual episodes can again be downloaded but attempting to
  download a series results only downloading the first episode.
- Some upcoming episodes were being downloaded as zero-length files
- Only Python 3.5+ supported from now on

Version 20201022

- Works again on Python 3.7 and older

Version 20201019

- Download subtitles into a separate file when using "--backend wget"
- Fixed --latestepisode to actually download the latest, not the first, episode
- The wget backend now really is silent on -qq

Version 20200807

- Fixed failing audio episodes caused by a page not being recognizing correctly